add back to top element and styles

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<div id="backToTop">
+ Top
+</div>
 <div id="preloader">
     <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
 </div>
